[project]
name = "libretro-image-matching-server"
version = "0.1.0"
description = "A FastAPI server that matches game ROM names with their corresponding thumbnail images from the Libretro thumbnails database"
authors = [
    { name = "Jose Diaz-Gonzalez", email = "libretro-image-matching-server@josediazgonzalez.com" },
]
readme = "README.md"

requires-python = ">=3.9,<4.0"

dependencies = [
    "fastapi[standard] (>=0.115.12,<0.116.0)",
    "uvicorn>=0.34.0",
    "fastapi-cache2>=0.2.1",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "thefuzz>=0.22.1",
    "python-Levenshtein>=0.27.1",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.main.dependencies]
uvicorn = "0.35.0"
fastapi = "0.115.13"
fastapi-cache2 = "0.2.2"
beautifulsoup4 = "4.13.4"
requests = "2.32.4"
thefuzz = "0.22.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
